# AI-Agent

./: .gitignore  README.md  package.json
Ollama/: ReadMe.txt  config.py  main.py  ui.py
Ollama/agents/: rag_agent.py  sql_optimizer_agent.py
Ollama/db/: mysql_connector.py  schema_utils.py
Ollama/prompts/: prompt_templates.py
Ollama/retriever/: schema_retriever.py
OpenAI/: README.md  package-lock.json  retail.db
OpenAI/data/: retail.csv
OpenAI/public/: index.html
OpenAI/public/ui/: script.js  style.css
OpenAI/src/: createDB.js  openaiAgent.js  server.js
TestAgent/: README.md  nodemon.json  package-lock.json  package.json  server.js
TestAgent/backend/controllers/: coverageController.js
TestAgent/backend/routes/: coverageRoutes.js
TestAgent/backend/services/: coverageService.js
TestAgent/frontend/: index.html
TestAgent/frontend/src/: App.css  App.jsx
TestAgent/frontend/src/components/: CoverageResult.jsx
ai-test-agent/: .env  README.md  langgraph.json  main.py  requirements.txt  test.py
ai-test-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
ai-test-agent/agents/: code_analyzer.py  test_fixer.py  test_generator.py  test_runner.py  web_searcher.py
ai-test-agent/config/: settings.py
ai-test-agent/langgraph/: graph_builder.py
ai-test-agent/utils/: file_utils.py
langgraph/lg1/: README.md  pyproject.toml
langgraph/lg1/src/sections/basics/: agents.py
src/: csvParser.js  dbAgent.js  fetchDBSchema  schemaSuggestion.js
