[project]
name = "sections"
version = "0.1.0"
description = ""
authors = [
    {name = "Ram Singh",email = "ram.singh.akg@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langgraph (>=0.3.29,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "python-decouple (>=3.8,<4.0)",
    "duckduckgo-search (>=8.0.0,<9.0.0)",
    "gradio (>=5.25.0,<6.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "tavily-python (>=0.5.4,<0.6.0)",
    "langchain-community (>=0.3.21,<0.4.0)"
]

[tool.poetry]
packages = [{include = "sections", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
